@@ -127,6 +127,7 @@ Engine fixes:
 * Item quantity menu now wraps around when using the increment/decrement buttons.
 * Fixed mod-specific default keybindings not loading when user resets configuration to default.
 * Fixed repeater powers having no effect if the first hazard hit a wall.
+* Attempt to fall back to default values if base/head graphics don't exist for a hero option.
 * Android: Fix 'Flare' directory not being automatically created.
 * Android: Added a dialog to direct the player to the wiki page for installing if no game data is found.
 
